--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabs_layout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:background="@color/purple_500"
+        app:layout_constraintTop_toTopOf="parent"
+        app:tabIndicatorColor="@color/black"
+        app:tabSelectedTextColor="@color/white"
+        app:tabIconTint="@color/black"
+        >
+    <com.google.android.material.tabs.TabItem
+        android:text="Rock"
+        android:icon="@drawable/ic_baseline_bug_report_24"
+        android:layout_height="match_parent"
+        android:layout_width="wrap_content" />
+        <com.google.android.material.tabs.TabItem
+            android:text="Classic"
+            android:icon="@drawable/ic_baseline_bathtub_24"
+            android:layout_height="match_parent"
+            android:layout_width="wrap_content" />
+        <com.google.android.material.tabs.TabItem
+            android:text="Pop"
+            android:icon="@drawable/ic_baseline_android_24"
+            android:layout_height="match_parent"
+            android:layout_width="wrap_content" />
+</com.google.android.material.tabs.TabLayout>
+    <FrameLayout
+        android:id="@+id/display_fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/tabs_layout"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
