--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,36 +10,56 @@
         android:id="@+id/tabs_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/purple_500"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:background="@color/purple_500"
         app:layout_constraintTop_toTopOf="parent"
-        app:tabIndicatorColor="@color/black"
-        app:tabSelectedTextColor="@color/white"
         app:tabIconTint="@color/black"
-        >
-    <com.google.android.material.tabs.TabItem
-        android:text="Rock"
-        android:icon="@drawable/ic_baseline_bug_report_24"
-        android:layout_height="match_parent"
-        android:layout_width="wrap_content" />
-        <com.google.android.material.tabs.TabItem
-            android:text="Classic"
-            android:icon="@drawable/ic_baseline_bathtub_24"
-            android:layout_height="match_parent"
-            android:layout_width="wrap_content" />
-        <com.google.android.material.tabs.TabItem
-            android:text="Pop"
-            android:icon="@drawable/ic_baseline_android_24"
-            android:layout_height="match_parent"
-            android:layout_width="wrap_content" />
-</com.google.android.material.tabs.TabLayout>
-    <FrameLayout
-        android:id="@+id/display_fragment_container"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/tabs_layout"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:tabIndicatorColor="@color/black"
+        app:tabSelectedTextColor="@color/white">
 
-        />
+        <com.google.android.material.tabs.TabItem
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:icon="@drawable/ic_baseline_bug_report_24"
+            android:text="Rock" />
+
+        <com.google.android.material.tabs.TabItem
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:icon="@drawable/ic_baseline_bathtub_24"
+            android:text="Classic" />
+
+        <com.google.android.material.tabs.TabItem
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:icon="@drawable/ic_baseline_android_24"
+            android:text="Pop" />
+    </com.google.android.material.tabs.TabLayout>
+
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_refresh"
+        android:layout_width="412dp"
+        android:layout_height="655dp"
+        android:layout_margin="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_music"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="6dp"
+
+            />
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="80dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
