--- a/app/src/main/res/layout/fragment_display_detail.xml
+++ b/app/src/main/res/layout/fragment_display_detail.xml
@@ -4,36 +4,50 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:layout_marginTop="6dp"
+    android:layout_marginBottom="6dp"
+    >
 
     <ImageView
         android:id="@+id/iv_song_art"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:minWidth="150dp"
-
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:src="@tools:sample/avatars" />
+
     <TextView
         android:id="@+id/tv_collection_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@id/iv_song_art"
-        app:layout_constraintTop_toBottomOf="parent"/>
+        android:layout_marginStart="60dp"
+        android:text="Collection Name"
+        app:layout_constraintStart_toStartOf="@+id/iv_song_art"
+        app:layout_constraintTop_toTopOf="@+id/iv_song_art" />
+
     <TextView
         android:id="@+id/tv_artist_name"
+        android:text="Artist Name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toEndOf="@id/iv_song_art"
         app:layout_constraintTop_toBottomOf="@id/tv_collection_name"
         />
+
     <TextView
         android:id="@+id/tv_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="100dp"
+        android:text="Price"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.888"
         app:layout_constraintStart_toEndOf="@id/tv_artist_name"
-        app:layout_constraintTop_toBottomOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.512" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
